WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71743
REGRESSION (
r98178
): World of Warcraft Launcher crashes in FrameView::isOnActivePage()
https://bugs.webkit.org/show_bug.cgi?id=71743
Summary
REGRESSION (r98178): World of Warcraft Launcher crashes in FrameView::isOnAct...
mitz
Reported
2011-11-07 16:19:51 PST
<
rdar://problem/10405215
>
Attachments
Null-check FrameView::m_frame in isOnActivePage()
(1.14 KB, patch)
2011-11-07 16:33 PST
,
mitz
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-11-07 16:33:17 PST
Created
attachment 113954
[details]
Null-check FrameView::m_frame in isOnActivePage()
mitz
Comment 2
2011-11-07 17:17:46 PST
Fixed in<
http://trac.webkit.org/r99508
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug