<rdar://problem/10405215> REGRESSION (r98178): World of Warcraft Launcher crashes in FrameView::isOnActivePage() https://bugs.webkit.org/show_bug.cgi?id=71743

Reviewed by Beth Dakin.

* page/FrameView.cpp:
(WebCore::FrameView::isOnActivePage): Added a check for a null m_frame.



Canonical link: https://commits.webkit.org/88081@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99508 268f45cc-cd09-0410-ab3c-d52691b4dbfc